--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -32,7 +32,8 @@
         <div class="menu elm_ct col">
           <img
             class="logo"
-            src="./Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg"
+            alt="logo ohmyfood"
+            src="./Images_et_textes_Ohmyfood/images/logo/ohmyfood-2x.svg"
           />
         </div>
         <a href="./index.html" class="hd_bck"
@@ -42,7 +43,8 @@
       <main class="elm_ct col">
         <div class="img_ctn">
           <img
-            src="./Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+            alt="a la francaise"
+            src="./Images_et_textes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
           />
         </div>
         <div class="menu_ctn elm_ct col">
@@ -62,8 +64,9 @@
                 <span class="plt_desc">Aux zestes d'orange</span>
               </div>
               <span class="plt_price">25€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim2">
@@ -72,8 +75,9 @@
                 <span class="plt_desc">Carotte, panais, topinambour</span>
               </div>
               <span class="plt_price">35€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim3">
@@ -82,8 +86,9 @@
                 <span class="plt_desc">Revisitée</span>
               </div>
               <span class="plt_price">20€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -95,8 +100,9 @@
                 <span class="plt_desc">Accompagnée d'une purée de panais</span>
               </div>
               <span class="plt_price">40€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim5">
@@ -105,8 +111,9 @@
                 <span class="plt_desc">Et parmentier de pommes de terre</span>
               </div>
               <span class="plt_price">35€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim6">
@@ -117,8 +124,9 @@
                 >
               </div>
               <span class="plt_price">44€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -130,8 +138,9 @@
                 <span class="plt_desc">Et purée de noisettes</span>
               </div>
               <span class="plt_price">18€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim8">
@@ -140,8 +149,9 @@
                 <span class="plt_desc">Revisité</span>
               </div>
               <span class="plt_price">22€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim9">
@@ -150,8 +160,9 @@
                 <span class="plt_desc">Mystilles et pâte d'amande</span>
               </div>
               <span class="plt_price">23€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -174,7 +185,7 @@
               <a href="#" class="ft_txt">
                 <span>Mention Légales</span>
               </a>
-              <a href="#" class="ft_txt">
+              <a href="mailto:contactt@ohmyfood.com" class="ft_txt">
                 <span>Contact</span>
               </a>
             </div>
