--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -32,7 +32,8 @@
         <div class="menu elm_ct col">
           <img
             class="logo"
-            src="./Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg"
+            alt="logo ohmyfood"
+            src="./Images_et_textes_Ohmyfood/images/logo/ohmyfood-2x.svg"
           />
         </div>
         <a href="./index.html" class="hd_bck"
@@ -42,7 +43,8 @@
       <main class="elm_ct col">
         <div class="img_ctn">
           <img
-            src="./Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            alt="le delice des sens"
+            src="./Images_et_textes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
           />
         </div>
         <div class="menu_ctn elm_ct col">
@@ -62,8 +64,9 @@
                 <span class="plt_desc">Assaisonné au yuzu</span>
               </div>
               <span class="plt_price">25€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim2">
@@ -72,8 +75,9 @@
                 <span class="plt_desc">Et sa farandole de petits légumes</span>
               </div>
               <span class="plt_price">35€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -87,8 +91,9 @@
                 <span class="plt_desc">Et sa crème de truffe</span>
               </div>
               <span class="plt_price">40€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim4">
@@ -97,8 +102,9 @@
                 <span class="plt_desc">Et ses légumes de saison</span>
               </div>
               <span class="plt_price">35€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim5">
@@ -107,8 +113,9 @@
                 <span class="plt_desc">Et sa purée de panais</span>
               </div>
               <span class="plt_price">44€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -120,8 +127,9 @@
                 <span class="plt_desc">Du chef</span>
               </div>
               <span class="plt_price">18€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim7">
@@ -130,8 +138,9 @@
                 <span class="plt_desc">Revisitée</span>
               </div>
               <span class="plt_price">22€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim8">
@@ -140,8 +149,9 @@
                 <span class="plt_desc">A la noisette</span>
               </div>
               <span class="plt_price">23€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -164,7 +174,7 @@
               <a href="#" class="ft_txt">
                 <span>Mention Légales</span>
               </a>
-              <a href="#" class="ft_txt">
+              <a href="mailto:contactt@ohmyfood.com" class="ft_txt">
                 <span>Contact</span>
               </a>
             </div>
