--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -32,7 +32,8 @@
         <div class="menu elm_ct col">
           <img
             class="logo"
-            src="./Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg"
+            alt="logo ohmyfood"
+            src="./Images_et_textes_Ohmyfood/images/logo/ohmyfood-2x.svg"
           />
         </div>
         <a href="./index.html" class="hd_bck"
@@ -42,7 +43,8 @@
       <main class="elm_ct col">
         <div class="img_ctn">
           <img
-            src="./Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+            alt="la note enchantee"
+            src="./Images_et_textes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
           />
         </div>
         <div class="menu_ctn elm_ct col">
@@ -56,7 +58,7 @@
           </section>
           <section class="sct_menu">
             <span class="sct_title">ENTREES</span>
-            <div class="plat elm_ct row anim1">
+            <div class="plat row anim1">
               <div class="plt_txt col">
                 <span class="plt_title">Ravioles de foi gras</span>
                 <span class="plt_desc"
@@ -64,8 +66,9 @@
                 >
               </div>
               <span class="plt_price">25€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim2">
@@ -74,8 +77,9 @@
                 <span class="plt_desc">sur blini à la farine de blé noir</span>
               </div>
               <span class="plt_price">35€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim3">
@@ -84,8 +88,9 @@
                 <span class="plt_desc">Marinés aux zestes d'orange</span>
               </div>
               <span class="plt_price">20€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim4">
@@ -94,8 +99,9 @@
                 <span class="plt_desc">Confiture de figue et pain toasté</span>
               </div>
               <span class="plt_price">35€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -107,8 +113,9 @@
                 <span class="plt_desc">Sur lit de purée de céleri-rave</span>
               </div>
               <span class="plt_price">40€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim6">
@@ -117,8 +124,9 @@
                 <span class="plt_desc">Purée de patae douce</span>
               </div>
               <span class="plt_price">35€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim7">
@@ -129,8 +137,9 @@
                 >
               </div>
               <span class="plt_price">45€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -144,8 +153,9 @@
                 >
               </div>
               <span class="plt_price">18€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim9">
@@ -154,8 +164,9 @@
                 <span class="plt_desc">Avec son coulis de citron</span>
               </div>
               <span class="plt_price">22€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim10">
@@ -164,8 +175,9 @@
                 <span class="plt_desc">Déstructurée</span>
               </div>
               <span class="plt_price">23€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -188,7 +200,7 @@
               <a href="#" class="ft_txt">
                 <span>Mention Légales</span>
               </a>
-              <a href="#" class="ft_txt">
+              <a href="mailto:contactt@ohmyfood.com" class="ft_txt">
                 <span>Contact</span>
               </a>
             </div>
