--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div class="menu elm_ct">
           <img
             class="logo"
-            src="./Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg"
+            alt="logo ohmyfood"
+            src="./Images_et_textes_Ohmyfood/images/logo/ohmyfood-2x.svg"
           />
         </div>
         <div class="localisation elm_ct">
@@ -78,7 +79,8 @@
               <article class="card">
                 <img
                   class="card_img"
-                  src="./Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  alt="la palette du gout"
+                  src="./Images_et_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 />
                 <div class="card_bottom_ctn elm_ct row">
                   <div class="card_txt_ctn">
@@ -97,7 +99,8 @@
               <article class="card">
                 <img
                   class="card_img"
-                  src="./Images et textes Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  alt="la note enchantee"
+                  src="./Images_et_textes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 />
                 <div class="card_bottom_ctn elm_ct row">
                   <div class="card_txt_ctn">
@@ -116,7 +119,8 @@
               <article class="card">
                 <img
                   class="card_img"
-                  src="./Images et textes Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  alt="a la francaise"
+                  src="./Images_et_textes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 />
                 <div class="card_bottom_ctn elm_ct row">
                   <div class="card_txt_ctn">
@@ -134,7 +138,8 @@
               <article class="card">
                 <img
                   class="card_img"
-                  src="./Images et textes Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  alt="la delice des sens"
+                  src="./Images_et_textes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 />
                 <div class="card_bottom_ctn elm_ct row">
                   <div class="card_txt_ctn">
@@ -166,7 +171,7 @@
               <a href="#" class="ft_txt">
                 <span>Mention Légales</span>
               </a>
-              <a href="#" class="ft_txt">
+              <a href="mailto:contactt@ohmyfood.com" class="ft_txt">
                 <span>Contact</span>
               </a>
             </div>
