--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -32,7 +32,8 @@
         <div class="menu elm_ct col">
           <img
             class="logo"
-            src="./Images et textes Ohmyfood/images/logo/ohmyfood@2x.svg"
+            alt="logo ohmyfood"
+            src="./Images_et_textes_Ohmyfood/images/logo/ohmyfood-2x.svg"
           />
         </div>
         <a href="./index.html" class="hd_bck"
@@ -42,7 +43,8 @@
       <main class="elm_ct col">
         <div class="img_ctn">
           <img
-            src="./Images et textes Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            alt="la palette du gout"
+            src="./Images_et_textes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
           />
         </div>
         <div class="menu_ctn elm_ct col">
@@ -62,8 +64,9 @@
                 <span class="plt_desc">Au piment d'Espelette</span>
               </div>
               <span class="plt_price">25€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim2">
@@ -72,8 +75,9 @@
                 <span class="plt_desc">Et ses copeaux de truffe noire</span>
               </div>
               <span class="plt_price">35€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim3">
@@ -84,8 +88,9 @@
                 >
               </div>
               <span class="plt_price">20€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -99,8 +104,9 @@
                 >
               </div>
               <span class="plt_price">40€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim5">
@@ -111,8 +117,9 @@
                 >
               </div>
               <span class="plt_price">35€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim6">
@@ -121,8 +128,9 @@
                 <span class="plt_desc">Aux agrumes</span>
               </div>
               <span class="plt_price">44€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -134,8 +142,9 @@
                 <span class="plt_desc">Revisité</span>
               </div>
               <span class="plt_price">18€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim8">
@@ -146,8 +155,9 @@
                 >
               </div>
               <span class="plt_price">22€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
             <div class="plat elm_ct row anim9">
@@ -158,8 +168,9 @@
                 >
               </div>
               <span class="plt_price">23€</span>
+              <div class="check_space"></div>
               <div class="check elm_ct">
-                <i class="fa-regular fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
               </div>
             </div>
           </section>
@@ -182,7 +193,7 @@
               <a href="#" class="ft_txt">
                 <span>Mention Légales</span>
               </a>
-              <a href="#" class="ft_txt">
+              <a href="mailto:contactt@ohmyfood.com" class="ft_txt">
                 <span>Contact</span>
               </a>
             </div>
