pour livraison (+ mobile first)

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
       <footer>
         <div class="for_padding">
           <div class="ft_ctn">
+            <span class="ft_logo">ohmyfood</span>
             <div class="ft_txt_ctn elm_ct row">
               <a href="#" class="ft_txt_bold">
                 <i class="fa-solid fa-utensils elm_ct"></i>
@@ -171,11 +172,10 @@
               <a href="#" class="ft_txt">
                 <span>Mention Légales</span>
               </a>
-              <a href="mailto:contactt@ohmyfood.com" class="ft_txt">
+              <a href="mailto:contact@ohmyfood.com" class="ft_txt">
                 <span>Contact</span>
               </a>
             </div>
-            <span class="ft_logo">ohmyfood</span>
           </div>
         </div>
       </footer>
