--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -24,10 +24,38 @@
     <link rel="stylesheet" href="./css/CSSCommun.css" />
     <link rel="stylesheet" href="./css/Menu.css" />
     <link rel="stylesheet" href="./scss/Anim.css" />
+    <link rel="stylesheet" href="./scss/Loading.css" />
   </head>
 
   <body>
-    <div class="main-container hp_ctn elm_ct col">
+    <div class="loading ctn elm_ct col">
+      <div class="loading_ctn elm_ct">
+        <div class="lot1 elm_ct">
+          <svg class="svg1 elm_ct">
+            <circle class="circle1" cx="60px" cy="60px" r="60px"></circle>
+          </svg>
+          <svg class="svg2 elm_ct">
+            <circle class="circle2" cx="45px" cy="45px" r="45px"></circle>
+          </svg>
+          <svg class="svg3 elm_ct">
+            <circle class="circle3" cx="30px" cy="30px" r="30px"></circle>
+          </svg>
+        </div>
+        <div class="lot2 elm_ct">
+          <svg class="svg1 elm_ct">
+            <circle class="circle1" cx="60px" cy="60px" r="60px"></circle>
+          </svg>
+          <svg class="svg2 elm_ct">
+            <circle class="circle2" cx="45px" cy="45px" r="45px"></circle>
+          </svg>
+          <svg class="svg3 elm_ct">
+            <circle class="circle3" cx="30px" cy="30px" r="30px"></circle>
+          </svg>
+        </div>
+      </div>
+      <span>Chargement...</span>
+    </div>
+    <div class="main-container loaded hp_ctn elm_ct col">
       <header class="elm_ct">
         <div class="menu elm_ct col">
           <img
